[tool.poetry]
name = "dash-pst"
version = "0.1.0"
description = ""
authors = ["dunossauro <mendesxeduardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^1.19.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
selenium = "^3.141.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
